--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from technext.github.io/ronaldo/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 May 2021 11:01:25 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-    <title>Ronaldo - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Bhumi Kachhiya - BK</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
