--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					    	<div class="text pl-3">
 		    					<span class="date">2013-2014</span>
 		    					<h2>S.S.C.</h2>
-		    					<span class="position">Cambridge University</span>
+		    					<span class="position">Kasturba Kanya Vidhyalaya</span>
 		    				</div>
 	    				</div>
 					  </div>
