--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2016-2020</span>
-		    					<h2>B.E - Computer Engineering</h2>
+		    					<h2>B.E - Computer Engineering - 8.52</h2>
 		    					<span class="position">MBIT</span>
 	    					</div>
 	    				</div>
@@ -141,7 +141,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2014-2016</span>
-		    					<h2>H.S.C.</h2>
+		    					<h2>H.S.C. - 67%</h2>
 		    					<span class="position">Kasturba Kanya Vidhyalaya</span>
 		    				</div>
 	    				</div>
@@ -151,7 +151,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2013-2014</span>
-		    					<h2>S.S.C.</h2>
+		    					<h2>S.S.C.- 73%</h2>
 		    					<span class="position">Kasturba Kanya Vidhyalaya</span>
 		    				</div>
 	    				</div>
@@ -443,7 +443,7 @@
 
           
 	<!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg ftco-section" id="services-section">
+    <section  class="services section-bg ftco-section" id="services-section">
 		<div class="container">
   
 		  <div class="section-title" data-aos="fade-up">
@@ -496,10 +496,10 @@
 
 	  <div class="section-title" data-aos="fade-up">
 		<h2 class="text-center">Portfolio</h2>
-		<p class="text-center">Check out our beautifull portfolio</p>
+		<p class="text-center">This Section are under maintanance</p>
 	  </div>
 
-	  <div class="row" data-aos="fade-up" data-aos-delay="100">
+	  <!-- <div class="row" data-aos="fade-up" data-aos-delay="100">
 		<div class="col-lg-12">
 		  <ul id="portfolio-flters">
 			<li data-filter="*" class="filter-active">All</li>
@@ -640,7 +640,7 @@
 
 	  </div>
 
-	</div>
+	</div> -->
   </section><!-- End Portfolio Section -->
 
     
@@ -650,8 +650,8 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<p></p>
+						<p class="mb-0"><a href="https://www.upwork.com/freelancers/~0124644f7e49f0ee32" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
 			</div>
@@ -714,7 +714,7 @@
 		<ul class="ftco-footer-social list-unstyled float-md-left float-lft  text-center">
 			<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
 			<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-			<li class="ftco-animate"><a href="#"><span><i class="fa fa-dribbble" aria-hidden="true"></i></span></a></li>
+			
 		</ul>
             <p class="text-right mt-3">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by @ GuruDatt Creators</p>
 
