--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am Bhumi Kachhiya. I'm UI/UX Designer, Front end Developer and Wordpress/shopify Developer life long learner, and ready for new opportunities.</p>
+		            <p>I am Bhumi Kachhiya.I'm UI/UX Designer, Front end Developer life long learner, and ready for new opportunities.</p>
 		          <p>I believe in user centered design and delivering the best possible experience to people. I have experience with following technology</p>
-					<p>I was Representative of Madhuben & Bhanubhai Patel Institute of Technology 2019-2020. I also have experience in Non-technical field like Management , Speaker and Leadership. I worked as Secretary of ISTE MBIT SB and lead whole team since 2018 with 250+ members continuously 2 years. Also handle 20+ events as coordinator and volunteering in 35+ events.</p>
+					<p>I was Representative of Madhuben & Bhanubhai Patel Institute of Technology 2019-2020. I also have strong command in Non-technical field like Management , Public Speaking and Leadership. I worked as Secretary of ISTE MBIT SB and lead whole team since 2018 with 250+ members continuously 2 years. Also handle 20+ events as coordinator and volunteering in 35+ events.</p>
 				</div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
+              	<!--<p class="mb-4">
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
-                </p>
+                </p>-->
                 <!-- <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p> -->
               </div>
 	          </div>
